k8s/azure/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vendor-data-service
  labels:
    app: vendor-data-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vendor-data-service
  template:
    metadata:
      labels:
        app: vendor-data-service
    spec:
      containers:
        - name: app
          image: youracr.azurecr.us/vendor-data-service:0.1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 20
