k8s/azure/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vendor-data-service
  labels:
    app: vendor-data-service
spec:
  type: ClusterIP
  selector:
    app: vendor-data-service
  ports:
    - name: http
      port: 80
      targetPort: 8080
